--- a/app/sass/_config.sass
+++ b/app/sass/_config.sass
@@ -6,16 +6,22 @@ $textcolor: #333 // Text Color
 $system: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
 $roboto: Roboto, sans-serif // Roboto Font Family
 $ubuntu: Ubuntu, sans-serif // Ubuntu Font Family
-
+$primary: #0058B4
+$primary-dark: #003873
 // Bootstrap compatible gutter variable => $gutter
-$grid-gutter-width: 20px
+$grid-gutter-width: 30px
 $gutter: $grid-gutter-width
-
+$breadcrumb-divider: quote("•")
+$input-btn-padding-y: .5rem
+$input-btn-padding-x: 1rem
+$input-btn-padding-y-lg: 1.0625rem
+$input-btn-padding-x-lg: 1.75rem
 // IMPORT SECTION
 
 @import 'node_modules/bootstrap/scss/bootstrap-reboot.scss' // Bootstrap Reboot collection
 @import 'node_modules/bootstrap/scss/mixins/_breakpoints.scss' // Bootstrap Breakpoints mixin
-// @import 'node_modules/bootstrap/scss/bootstrap-grid.scss' // Optional Bootstrap Grid
+@import 'node_modules/bootstrap/scss/bootstrap.scss' // Optional Bootstrap Grid
+// @import 'node_modules/bootstrap/scss/utilities/_sizing.scss' // Optional Bootstrap Utilites
 // @import 'node_modules/bootstrap/scss/utilities/_sizing.scss' // Optional Bootstrap Utilites
 
 // FONTS LOAD SECTION
@@ -40,24 +46,3 @@ body
 	line-height: 1.65
 	overflow-x: hidden
 	color: $textcolor
-
-// INPUTS
-
-::placeholder
-	color: #666
-
-::selection
-	background-color: $accent
-	color: #fff
-
-input, textarea
-	outline: none
-	&:focus:required:invalid
-		border-color: red
-	&:required:valid
-		border-color: green
-
-
-+media-breakpoint-up(sm)
-	body
-		font-size: $fontsize * 1.2
