--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,4 +1,41 @@
 @import config
 
-// CUSTOM USER STYLES & IMPORTS
-
++media-breakpoint-up(sm)
+    .section
+        padding-top: 30px
+        padding-bottom: 60px
+    // INPUTS
+    ::placeholder
+        color: #666
+    ::selection
+	    background-color: $accent
+	    color: #fff
+    input, textarea
+        outline: none
+        &:focus:required:invalid
+            border-color: red
+        &:required:valid
+            border-color: green
+    footer
+        background-color: $primary-dark
+        a
+            color: #fff
+            &:hover
+                color: #fff
+                text-decoration: underline
+        hr
+            border-color: $white
+    .yoldi-link
+        position: absolute
+        right: 1rem
+        bottom: .5rem
+    .breadcrumb
+        background-color: transparent
+        a
+            color: $gray-700
+    .breadcrumb-item
+        font-size: .9rem
+        color: #7F92A5
+    .breadcrumb-item+.breadcrumb-item::before
+        font-size: 1.32rem
+        line-height: 1
